src/objects/Item__c.object
<CustomObject>
    <fields>
        <fullName>Commissionable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Do sales reps receive commission on these charges?</description>
        <label>Commissionable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <formula>IF(TEXT(Type__c) == &apos;Transcript&apos;, 1, 
IF(TEXT(Type__c) == &apos;Exhibits&apos;,2, 
IF(TEXT(Type__c) == &apos;Video&apos;,3, 
IF(TEXT(Type__c) == &apos;Miscellaneous&apos;,4,5 ) 
)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order No</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admin Fee</fullName>
                </value>
                <value>
                    <fullName>Appearance Fee</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Exhibits</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <columns>Commissionable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>